Take UUID from a hidden element instead of the current URL

--- a/src/main/features/directions-questionnaire/views/hearing-dates.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-dates.njk
@@ -43,6 +43,7 @@
         </div>
         {{ saveAndContinueButton() }}
       </form>
+      <div hidden id="externalId">{{ externalId }}</div>
     </div>
   </div>
 {% endblock %}
