--- a/src/main/views/govukTemplate.njk
+++ b/src/main/views/govukTemplate.njk
@@ -27,7 +27,7 @@
   <meta name="theme-color" content="#0b0c0c" />
 
   {% if development %}
-    <link href="{{ asset_paths['style_vendor'] }}/HTMLCSAuditor.css" rel="stylesheet" />
+    <link href="{{ asset_paths['style_vendor'] }}/HTMLCS.css" rel="stylesheet" />
   {% endif %}
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
