--- a/src/main/public/stylesheets/components/_colours.scss
+++ b/src/main/public/stylesheets/components/_colours.scss
@@ -4,4 +4,4 @@ $expandable-background: $light-blue;
 $day-cell-hover-colour: #bbd9e9;
 $day-cell-active-colour: #76b2d2;
 $selected-dates-separator-colour: #bfc1c3;
-$black: #000;
+$govuk-text-colour: #0b0c0c;
