Standardised colours as much as possible

--- a/src/main/public/stylesheets/components/_colours.scss
+++ b/src/main/public/stylesheets/components/_colours.scss
@@ -3,5 +3,5 @@ $expandable-background: $light-blue;
 
 $day-cell-hover-colour: #bbd9e9;
 $day-cell-active-colour: #76b2d2;
-$selected-dates-separator-colour: #bfc1c3;
+$govuk-border-colour: #bfc1c3;
 $govuk-text-colour: #0b0c0c;
