--- a/src/main/public/stylesheets/components/_date-picker.scss
+++ b/src/main/public/stylesheets/components/_date-picker.scss
@@ -140,12 +140,12 @@
 
   div {
     &:not(.noItems) {
-      border-bottom: 1px solid $selected-dates-separator-colour;
+      border-bottom: 1px solid $govuk-border-colour;
       padding: 15px 0;
       width: 100%;
 
       &:first-child {
-        border-top: 1px solid $selected-dates-separator-colour;
+        border-top: 1px solid $govuk-border-colour;
       }
     }
 
