--- a/src/main/features/directions-questionnaire/views/support-required.njk
+++ b/src/main/features/directions-questionnaire/views/support-required.njk
@@ -15,15 +15,15 @@
               {{ t('Select any support you’d require for a court hearing (optional)') }}
             </span>
           </legend>
-          {% call expandableCheckboxOption(form = form, name = 'languageSelected', value = 'true', label = "Language Interpreter", checked = form.valueFor('languageSelected')) %}
+          {% call expandableCheckboxOption(form = form, name = 'languageSelected', value = 'true', label = "Language Interpreter", checked = form.valueFor('languageSelected'), headerEnabled = false) %}
             {{ textInput(label = 'What language needs to be interpreted?', hint = 'You’ll have to arrange and pay for interpreters except for Welsh.', form = form, name = 'languageInterpreted', inputClass = '') }}
           {% endcall %}
-          {% call expandableCheckboxOption(form = form, name = 'signLanguageSelected', value = 'true', label = t('Sign Language Interpreter'), checked = form.valueFor('signLanguageSelected')) %}
+          {% call expandableCheckboxOption(form = form, name = 'signLanguageSelected', value = 'true', label = t('Sign Language Interpreter'), checked = form.valueFor('signLanguageSelected'), headerEnabled = false) %}
             {{ textInput(label = 'Enter the sign language you need', form = form, name = 'signLanguageInterpreted', inputClass = '') }}
           {% endcall %}
           {{ option(form = form, name = 'hearingLoopSelected', value = 'true', type = 'checkbox', checked = form.valueFor('hearingLoopSelected'), label = t('Hearing Loop')) }}
           {{ option(form = form, name = 'disabledAccessSelected', value = 'true', type = 'checkbox', checked = form.valueFor('disabledAccessSelected'), label = t('Disabled Access')) }}
-          {% call expandableCheckboxOption(form = form, name = 'otherSupportSelected', value = 'true', label = 'Other support', checked = form.valueFor('otherSupportSelected')) %}
+          {% call expandableCheckboxOption(form = form, name = 'otherSupportSelected', value = 'true', label = 'Other support', checked = form.valueFor('otherSupportSelected'), headerEnabled = false) %}
             {{ textArea(label = 'Explain the other support you need at your hearing', form = form, name = 'otherSupport') }}
           {% endcall %}
         </fieldset>
@@ -32,5 +32,4 @@
     </div>
   </div>
 {% endblock %}
-
 
