--- a/src/main/views/includes/scripts.njk
+++ b/src/main/views/includes/scripts.njk
@@ -1,3 +1,6 @@
+<noscript>
+    <img src="{{ asset_paths["images_vendor"] }}/noJS.png" width="1" height="1" />
+</noscript>
 <!-- Javascript -->
 <script src="{{ asset_paths['js_vendor'] }}/jquery.min.js"></script>
 <script src="{{ asset_paths['js_vendor'] }}/govuk/shim-links-with-button-role.js"></script>
