--- a/src/main/public/stylesheets/components/_date-picker.scss
+++ b/src/main/public/stylesheets/components/_date-picker.scss
@@ -1,4 +1,3 @@
-// sass-lint:disable nesting-depth
 
 .datepicker-wrapper {
   margin-bottom: 20px;
@@ -16,11 +15,11 @@
       th {
         padding: 10px 0;
         text-align: center;
+      }
 
-        &.dow {
-          background-color: $grey-4;
-          padding-right: 0;
-        }
+      .dow {
+        background-color: $grey-4;
+        padding-right: 0;
       }
 
       .prev,
@@ -92,6 +91,10 @@
 
           .first-of-month {
             margin-top: 28px;
+          }
+
+          &:hover {
+            background: url('/img/date-picker/date_disabled.png');
           }
         }
 
