added the noscript tag to track non-javascript users

--- a/src/main/views/includes/scripts.njk
+++ b/src/main/views/includes/scripts.njk
@@ -1,5 +1,5 @@
 <noscript>
-    <img src="{{ asset_paths["images_vendor"] }}/noJS.png" width="1" height="1" />
+    <img src="{{ asset_paths['images'] }}/misc/noJS.png" width="1" height="1" />
 </noscript>
 <!-- Javascript -->
 <script src="{{ asset_paths['js_vendor'] }}/jquery.min.js"></script>
