--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
@@ -2,14 +2,13 @@
 {% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadResponseLink %}
 
-{% macro partAdmitRejectedByClaimantDashboard(claim) %}
-  {{ t('You’ve rejected the defendant’s admission. They said they owe {{ amount }}', { amount: claim.response.amount | numeral }) }}
+{% macro partAdmitRejectedByClaimantDashboard() %}
+  {{ t('You’ve rejected the defendant’s admission.') }}
 {% endmacro %}
 
 {% macro partAdmitRejectedByClaimantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('You’ve rejected the defendant’s admission.') }}</h2>
-    <p>{{ t('They said they owe {{ amount }}', { amount: claim.response.amount | numeral }) }}</p>
 
     {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
       <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange an appointment.') }}</p>
