Show different content for claimant and defendant

--- a/src/main/features/mediation/views/will-you-try-mediation.njk
+++ b/src/main/features/mediation/views/will-you-try-mediation.njk
@@ -24,7 +24,7 @@
                 label: 'Yes',
                 value: YesNoOption.YES.option,
                 checked: (form.valueFor('option') === YesNoOption.YES),
-                hint: 'We’ll ask the claimant if they’ll try free mediation. If they say no, the claim will go to a hearing.'
+                hint: hint
               },
               {
                 label: 'No',
