--- a/src/main/features/mediation/views/free-mediation.njk
+++ b/src/main/features/mediation/views/free-mediation.njk
@@ -8,15 +8,25 @@
     <div class="column-two-thirds">
       <p>{{ t('More than 60% of people who use our free mediation service settle on the day.*') }}</p>
 
-      <p>{{ t('The free service can help you:') }}</p>
-      <ul class="list list-bullet">
-        <li>{{ t('avoid a long wait for the claim to be resolved') }}</li>
-        <li>{{ t('avoid a court hearing, which can last a whole day') }}</li>
-        <li>{{ t('avoid a County Court Judgment') }}</li>
-        </li>
-      </ul>
+      {% if defendant %}
+        <p>{{ t('The free service can help you:') }}</p>
+        <ul class="list list-bullet">
+          <li>{{ t('avoid a long wait for the claim to be resolved') }}</li>
+          <li>{{ t('avoid a court hearing, which can last a whole day') }}</li>
+          <li>{{ t('avoid a County Court Judgment') }}</li>
+          </li>
+        </ul>
 
-      <p>{{ t('You’ll only speak to a mediator about the claim, not to {{ otherParty }}.', { otherParty: otherParty }) }}</p>
+        <p>{{ t('You’ll only speak to a mediator about the claim, not to {{ otherParty }}.', { otherParty: otherParty }) }}</p>
+      {% else %}
+        <p>{{ t('Continuing the claim doesn’t guarantee you get paid - it can mean:') }}</p>
+        <ul class="list list-bullet">
+          <li>{{ t('it takes longer to resolve your claim') }}</li>
+          <li>{{ t('you have to go to a court hearing and pay a fee') }}</li>
+          </li>
+        </ul>
+        <p>{{ t('You’ll only speak to a mediator about the claim, not to {{ otherParty }}.', { otherParty: otherParty }) }}</p>
+      {% endif %}
 
       <form method="post" novalidate>
         {{ csrfProtection(csrf) }}
