added changelinks to check and send, also added field in details page for contact person

--- a/src/main/features/claim/views/check-and-send.njk
+++ b/src/main/features/claim/views/check-and-send.njk
@@ -20,6 +20,7 @@
           changeLinks = {
             name: claimantPartyDetailsPageUri,
             address: claimantPartyDetailsPageUri,
+            contactPerson: claimantPartyDetailsPageUri,
             dateOfBirth: paths.claimantDateOfBirthPage.uri
           }
         )
@@ -34,6 +35,7 @@
             showCorrespondenceAddressSection = false,
               changeLinks = {
               name: defendantPartyDetailsPageUri,
+              contactPerson: defendantPartyDetailsPageUri,
               address: defendantPartyDetailsPageUri
            }
         )
