--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -57,7 +57,7 @@
       }}
     {% endif %}
   {% else %}
-    {% if mediationDraft.canWeUse.mediationPhoneNumber %}
+    {% if mediationDraft.youCanOnlyUseMediation and mediationDraft.canWeUse.mediationPhoneNumber %}
       {{
       row(
         label = 'Contact number',
@@ -66,7 +66,7 @@
         bold = true
       )
       }}
-    {% else %}
+    {% elseif mediationDraft.youCanOnlyUseMediation %}
       {{
       row(
         label = 'Contact number',
