replaced standard links on task list pages with buttons

--- a/src/main/features/claim/views/task-list.njk
+++ b/src/main/features/claim/views/task-list.njk
@@ -1,5 +1,6 @@
 {% extends "layout.njk" %}
 {% from "task-list.njk" import task, taskListHeading, disabledTask %}
+{% from "internalLink.njk" import internalLink %}
 {% set heading = 'Make a money claim' %}
 
 {% block content %}
@@ -23,10 +24,9 @@
 
       <div class="task-group">
         {{ taskListHeading(submit.name) }}
-
-        {% for item in submit.tasks %}
-          {{ task(item.startPageUrl, t(item.name), item.completed) }}
-        {% endfor %}
+        <div class="check-submit-response">
+          {{ internalLink(t('Check and submit your response'), ClaimPaths.checkAndSendPage.uri, 'button button-primary') }}
+        </div>
       </div>
     </div>
   </div>
