--- a/src/main/features/claimant-response/views/task-list.njk
+++ b/src/main/features/claimant-response/views/task-list.njk
@@ -1,6 +1,6 @@
 {% extends "layout.njk" %}
 {% from "task-list.njk" import task, taskListHeading, disabledTask %}
-
+{% from "internalLink.njk" import internalLink %}
 {% set heading = 'Your response' %}
 
 {% block content %}
@@ -36,10 +36,9 @@
       {% if submitSection %}
         <div class="task-group">
           {{ taskListHeading(submitSection.name) }}
-
-          {% for item in submitSection.tasks %}
-            {{ task(item.startPageUrl, t(item.name), item.completed) }}
-          {% endfor %}
+          <div class="check-submit-response">
+            {{ internalLink(t('Check and submit your response'), ClaimantResponsePaths.checkAndSendPage.evaluateUri({ externalId: claim.externalId }), 'button button-primary') }}
+          </div>
         </div>
       {% endif %}
     </div>
