mediationPilot feature name

--- a/src/main/features/mediation/views/free-mediation.njk
+++ b/src/main/features/mediation/views/free-mediation.njk
@@ -6,7 +6,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      {% if autoRegister %}
+      {% if mediationPilot %}
 
         <p>{{ t('We’re automatically registering some claims worth £300 or less for free telephone mediation. Your claim has been selected for this.') }}</p>
         <p>{{ t('We’ll tell you how mediation works - you can decide to take part or not.') }}</p>
