--- a/src/main/features/dashboard/views/index.njk
+++ b/src/main/features/dashboard/views/index.njk
@@ -50,13 +50,21 @@
             <td>{{ claim.claimData.defendant.name }}</td>
             <td>{{ claim.totalAmountTillToday | numeral }}</td>
             <td class="mobile-hide">
+            {% if featureToggles.newDashboardStatus and claim.template.dashboard %}
+                {% include claim.template.dashboard ignore missing %}
+            {% else %}
               {{ caseStatusForClaimant(claim.status, claim) }}
+            {% endif %}
             </td>
           </tr>
           <tr>
             <td colspan="3" class="mobile-table-status">
               {{ t('Status:') }}
-              {{ caseStatusForClaimant(claim.status, claim) }}
+              {% if featureToggles.newDashboardStatus and claim.template.dashboard %}
+                {% include claim.template.dashboard ignore missing %}
+              {% else %}
+                {{ caseStatusForClaimant(claim.status, claim) }}
+              {% endif %}
             </td>
           </tr>
         {% endfor %}
@@ -95,14 +103,20 @@
             <td>{{ internalLink(claim.claimNumber, DashboardPaths.defendantPage.evaluateUri({ externalId: claim.externalId })) }}</td>
             <td>{{ claim.claimData.claimant.name }}</td>
             <td>{{ claim.totalAmountTillToday | numeral }}</td>
-            <td class="mobile-hide">
-              {{ caseStatusForDefendant(claim.status, claim) }}
-            </td>
+            {% if featureToggles.newDashboardStatus and claim.template.dashboard %}
+              {% include claim.template.dashboard ignore missing %}
+            {% else %}
+              {{ caseStatusForClaimant(claim.status, claim) }}
+            {% endif %}
           </tr>
           <tr>
             <td colspan="3" class="mobile-table-status">
               {{ t('Status:') }}
-              {{ caseStatusForDefendant(claim.status, claim) }}
+              {% if featureToggles.newDashboardStatus and claim.template.dashboard %}
+                {% include claim.template.dashboard ignore missing %}
+              {% else %}
+                {{ caseStatusForClaimant(claim.status, claim) }}
+              {% endif %}
             </td>
           </tr>
         {% endfor %}
