fixed status widths (the fix was in the wrong file)

--- a/src/main/public/stylesheets/components/_task-list.scss
+++ b/src/main/public/stylesheets/components/_task-list.scss
@@ -65,6 +65,8 @@ div {
   &.task-finished {
     background-color: $link-colour;
     float: right;
+    width: 120px;
+    text-align: center;
 
     strong {
       @include media (mobile) {
