--- a/src/main/public/stylesheets/components/_task-list.scss
+++ b/src/main/public/stylesheets/components/_task-list.scss
@@ -65,8 +65,8 @@ div {
   &.task-finished {
     background-color: $link-colour;
     float: right;
-    width: 120px;
     text-align: center;
+    width: 120px;
 
     strong {
       @include media (mobile) {
@@ -101,5 +101,6 @@ div {
 
 .check-submit-response {
   margin-left: 50px;
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
