fixed inital claim task list as it had 'response' rather than 'claim'

--- a/src/main/features/claim/views/task-list.njk
+++ b/src/main/features/claim/views/task-list.njk
@@ -25,7 +25,7 @@
       <div class="task-group">
         {{ taskListHeading(submit.name) }}
         <div class="check-submit-response">
-          {{ internalLink(t('Check and submit your response'), ClaimPaths.checkAndSendPage.uri, 'button button-primary') }}
+          {{ internalLink(t('Check and submit your claim'), ClaimPaths.checkAndSendPage.uri, 'button button-primary') }}
         </div>
       </div>
     </div>
