--- a/src/main/public/stylesheets/components/_task-list.scss
+++ b/src/main/public/stylesheets/components/_task-list.scss
@@ -65,6 +65,8 @@ div {
   &.task-finished {
     background-color: $link-colour;
     float: right;
+    text-align: center;
+    width: 120px;
 
     strong {
       @include media (mobile) {
@@ -95,5 +97,10 @@ div {
 // Stop collapsing divs when empty
 .if-empty {
   min-height: 1rem;
+}
+
+.check-submit-response {
+  margin-left: 50px;
+  margin-top: 10px;
 }
 
