Fixed dashboard issue

--- a/src/main/features/dashboard/views/index.njk
+++ b/src/main/features/dashboard/views/index.njk
@@ -107,7 +107,7 @@
               {% if featureToggles.newDashboardStatus and claim.template.dashboard %}
                 {% include claim.template.dashboard ignore missing %}
               {% else %}
-                {{ caseStatusForClaimant(claim.status, claim) }}
+                {{ caseStatusForDefendant(claim.status, claim) }}
               {% endif %}
             </td>
           </tr>
@@ -117,7 +117,7 @@
               {% if featureToggles.newDashboardStatus and claim.template.dashboard %}
                 {% include claim.template.dashboard ignore missing %}
               {% else %}
-                {{ caseStatusForClaimant(claim.status, claim) }}
+                {{ caseStatusForDefendant(claim.status, claim) }}
               {% endif %}
             </td>
           </tr>
