Headings don't need extra i18n

--- a/src/main/features/directions-questionnaire/views/expert.njk
+++ b/src/main/features/directions-questionnaire/views/expert.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, submitButton, linkButton %}
 
-{% set heading = t('Using an expert') %}
+{% set heading = 'Using an expert' %}
 
 {% block content %}
 <div class="grid-row">
