--- a/src/main/features/directions-questionnaire/views/hearing-location.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-location.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, radioOption, saveAndContinueButton, errorSummary, numericInput, textInput, radioGroup %}
 
-{% set heading = t('Choose a hearing location') %}
+{% set heading = 'Choose a hearing location' %}
 
 {% block content %}
   <div class="grid-row">
