--- a/src/main/features/directions-questionnaire/views/other-witnesses.njk
+++ b/src/main/features/directions-questionnaire/views/other-witnesses.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, radioOption, saveAndContinueButton, errorSummary, numericInput %}
 
-{% set heading = t('Do you want witnesses to give evidence?') %}
+{% set heading = 'Do you want witnesses to give evidence?' %}
 
 {% block content %}
   <div class="grid-row">
